--- a/source/package.json
+++ b/source/package.json
@@ -23,12 +23,14 @@
     "bower": "^1.8.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^3.1.1",
     "gulp-livereload": "^3.8.1",
-    "gulp-minify-css": "^1.2.4",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.0",
     "gulp-uglify": "^2.0.0",
+    "imagemin-jpeg-recompress": "^5.1.0",
+    "imagemin-pngquant": "^5.0.0",
     "static-server": "^2.0.3"
   }
 }
