--- a/source/bower.json
+++ b/source/bower.json
@@ -18,6 +18,13 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "3.1.1"
+    "jquery": "3.1.1",
+    "normalize-scss": "normalize.scss#^6.0.0",
+    "components-font-awesome": "^4.7.0"
+  },
+  "devDependencies": {
+    "breakpoint-sass": "^2.7.1",
+    "compass-sass-mixins": "*",
+    "susy": "^2.2.12"
   }
 }
