--- a/source/package.json
+++ b/source/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "bower": "^1.8.0",
     "gulp": "^3.9.1",
+    "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^3.1.1",
     "gulp-livereload": "^3.8.1",
