--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@
 output.txt
 source/public/dist
 source/node_modules
-source/server.js
 source/bower_components
 source/.sass-cache
+source/public/*.html
