--- a/source/package.json
+++ b/source/package.json
@@ -26,6 +26,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^3.1.1",
     "gulp-livereload": "^3.8.1",
+    "gulp-nunjucks-html": "^2.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.0",
