--- a/source/bower.json
+++ b/source/bower.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "jquery": "3.1.1",
     "normalize-scss": "normalize.scss#^6.0.0",
-    "components-font-awesome": "^4.7.0"
+    "components-font-awesome": "^4.7.0",
+    "scrollreveal": "^3.3.2"
   },
   "devDependencies": {
     "breakpoint-sass": "^2.7.1",
