--- a/source/bower.json
+++ b/source/bower.json
@@ -21,7 +21,9 @@
     "jquery": "3.1.1",
     "normalize-scss": "normalize.scss#^6.0.0",
     "components-font-awesome": "^4.7.0",
-    "scrollreveal": "^3.3.2"
+    "scrollreveal": "^3.3.2",
+    "hover": "Hover#^2.1.0",
+    "Simptip": "simptip#^1.0.4"
   },
   "devDependencies": {
     "breakpoint-sass": "^2.7.1",
