--- a/src/bower.json
+++ b/src/bower.json
@@ -24,7 +24,14 @@
     "scrollreveal": "^3.3.2",
     "hover": "Hover#^2.1.0",
     "Simptip": "simptip#^1.0.4",
-    "remodal": "^1.1.1"
+    "remodal": "^1.1.1",
+    "lightgallery": "^1.3.8",
+    "lg-thumbnail": "^1.0.2",
+    "lg-autoplay": "^1.0.2",
+    "lg-fullscreen": "^1.0.1",
+    "lg-pager": "^1.0.2",
+    "lg-zoom": "^1.0.4",
+    "lg-hash": "^1.0.1"
   },
   "devDependencies": {
     "breakpoint-sass": "^2.7.1",
